2003-07-24  Bastien Nocera  <hadess@hadess.net>

	* src/cd-drive.c: (get_device_max_speed), (get_scsi_cd_name),
	(add_linux_cd_recorder): upd from libbacon
	* src/totem-playlist.[ch]: couple of coding style cleanups
	* src/totem.c: (on_got_metadata_event): update the playlist title
	when playing a CD with CDDB

2003-07-23  Bastien Nocera  <hadess@hadess.net>

	* data/vanity.glade: removed the placeholder
	* src/Makefile.am:
	* src/gtk-playlist.[ch]:
	* src/totem-playlist.[ch]:
	* src/totem-playlist.h:
	* src/totem-private.h:
	* src/totem.c: renamed the GtkPlaylist widget to TotemPlaylist

2003-07-22  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2003-07-19  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: link vanity against the gnome-vfs authentication
	manager (fixes building on GNOME 2.2.x)

2003-07-18  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/Makefile.am: upd
	* src/bacon-video-widget-xine.c: (bacon_video_widget_unrealize),
	(bacon_video_widget_new): fixed 2 potential crashes
	* src/bvw-test.c: added a test program
	* src/totem.c: (on_video_motion_notify_event): maybe fix the popup
	placement issue for good?

2003-07-16  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade: remove accelerators from the tab labels

2003-07-15  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix libcurl detection for version equal to the
	requirements

2003-07-15  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_play), (totem_action_set_mrl): unescape
	the MRLs for display before using them in the error messages

2003-07-15  Bastien Nocera  <hadess@hadess.net>

	* src/bacon-video-widget-xine.c: (bacon_video_widget_idle_signal),
	(xine_event_message): pass the error messages events through the async
	handler (Closes: #117151, maybe)

2003-07-14  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_open_files): don't open files with