@@ -1,3 +1,9 @@
+2003-07-25  Bastien Nocera  <hadess@hadess.net>
+
+	* src/bacon-video-widget-xine.c: (bacon_video_widget_realize),
+	(bacon_video_widget_set_visuals): switch on-the-fly between visual
+	plugins
+
 2003-07-24  Bastien Nocera  <hadess@hadess.net>
 
 	* src/cd-drive.c: (get_device_max_speed), (get_scsi_cd_name),
